--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@100;300;400;500;800&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@100;300;400;500;800&display=swap');
 
 ::before,
 ::after,
@@ -28,7 +28,7 @@ html {
 
 body {
   background-color: var(--dark);
-  font-family: "JetBrains Mono", monospace, sans-serif;
+  font-family: 'JetBrains Mono', monospace, sans-serif;
   color: var(--white);
 }
 
@@ -115,6 +115,48 @@ body {
   }
 }
 
+/* Side Menu */
+.side-menu-button {
+  display: inline-block;
+  visibility: hidden;
+  position: fixed;
+  top: 30px;
+  left: 30px;
+  z-index: 110;
+  background: none;
+  border: none;
+  color: var(--green);
+  font-size: 5rem;
+}
+
+.side-menu {
+  backdrop-filter: blur(10px);
+  background-color: #0e0808b4;
+  flex-direction: column;
+  height: 100vh;
+  position: fixed;
+  top: 84px;
+  left: 0px;
+  width: 100%;
+  z-index: 100;
+  transition: transform 0.3s ease;
+}
+
+.side-menu .nav__list {
+  flex-direction: column;
+  height: 100%;
+  gap: 30px;
+}
+
+.side-menu .nav__link {
+  margin: 0px;
+  font-size: 4rem;
+}
+
+.collapsed {
+  transform: translateX(-100%);
+}
+
 /* Header */
 
 .header-container {
@@ -171,6 +213,12 @@ body {
   font-size: 3rem;
 }
 
+@media (min-width: 800px) {
+  .side-menu {
+    transform: translateX(-100%);
+  }
+}
+
 @media (max-width: 800px) {
   .tab {
     display: flex;
@@ -180,23 +228,12 @@ body {
     border-start-end-radius: 20px;
   }
 
-  .header {
-    justify-content: center;
-    padding: 10px 0;
+  .side-menu-button {
+    visibility: visible;
   }
 
-  .nav__link {
-    font-size: 1.6rem;
-    padding: 5px;
-    margin: 10px;
-  }
-
-  .nav__icon {
-    margin-bottom: 10px;
-  }
-
-  .hero {
-    margin-top: 30px;
+  .nav {
+    display: none;
   }
 
   .title {
@@ -211,10 +248,6 @@ body {
 @media (max-width: 450px) {
   .hero {
     margin-top: 100px;
-  }
-
-  .code-brackets {
-    display: none;
   }
 }
 
